added first webpage

--- a/index.html
+++ b/index.html
@@ -1,9 +1,106 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-ca">
   <head>
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta name="description" content="Area of Trapezoid program, in JS" />
+    <meta name="keywords" content="mths, ICD2O" />
+    <meta name="author" content="Hai Tran" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link
+      rel="stylesheet"
+      href="https://code.getmdl.io/1.3.0/material.light_blue-green.min.css"
+    />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="manifest" href="site.webmanifest" />
+    <title>Area of Trapezoid webpage, in JS</title>
   </head>
   <body>
-    <p>Paragraph</p>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="./js/script.js"></script>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+      <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+          <span class="mdl-layout-title"
+            >Area of Trapezoid program, with JS</span
+          >
+        </div>
+      </header>
+      <main class="mdl-layout__content">
+        <p>Formula</p>
+        <br />
+        <p>A = [ (a + b) /2 ] h</p>
+        <br />
+        <p>Please enter integers for dimensions:</p>
+        <div class="image">
+          <img src="./images/trapezoid.svg" alt="area of trapezoid image" />
+        </div>
+        <br />
+        <form action="#">
+          <!-- Numeric Textfield with Floating Label -->
+          Base A:
+          <div class="mdl-textfield mdl-js-textfield">
+            <input
+              class="mdl-textfield__input"
+              type="text"
+              pattern="-?[0-9]*(\.[0-9]+)?"
+              id="base-a"
+              aria-label="Base A"
+            />
+            <label class="mdl-textfield__label" for="base-b"></label>
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+          mm
+          <br>
+          <!-- Numeric Textfield with Floating Label -->
+          Base B:
+          <div class="mdl-textfield mdl-js-textfield">
+            <input
+              class="mdl-textfield__input"
+              type="text"
+              pattern="-?[0-9]*(\.[0-9]+)?"
+              id="base-b"
+              aria-label="Base B"
+            />
+            <label class="mdl-textfield__label" for="base-b"></label>
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+          mm
+          <br>
+          <!-- Numeric Textfield with Floating Label -->
+          Height: 
+          <div class="mdl-textfield mdl-js-textfield">
+            <input
+              class="mdl-textfield__input"
+              type="text"
+              pattern="-?[0-9]*(\.[0-9]+)?"
+              id="height"
+              aria-label="Height"
+            />
+            <label class="mdl-textfield__label" for="height"></label>
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+          mm
+          <br>
+          <button
+            class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+            onclick="calculateArea()"
+          >
+            Calculate
+          </button>
+        </form>
+        <br />
+        <br />
+        <div class="page-content-answer">
+          <div id="answer"></div>
+        </div>
+      </main>
+    </div>
   </body>
 </html>
